objects/PRT_Appearance__c.object
<CustomObject>
    <description>Capture an appearance made by talent</description>
    <label>Appearance</label>
    <nameField>
        <label>Appearance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appearances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advocate</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Brand Advocate</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Advocate</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appearances</relationshipLabel>
        <relationshipName>PRT_Appearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Appearance is performed under</description>
        <label>Contract</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contract does not belong to the selected Advocate.</errorMessage>
            <filterItems>
                <field>$Source.Advocate__c</field>
                <operation>equals</operation>
                <valueField>PRT_Contract__c.Advocate__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PRT_Contract__c</referenceTo>
        <relationshipLabel>Appearances</relationshipLabel>
        <relationshipName>Talent_Appearances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Link__c</fullName>
        <inlineHelpText>URL link to any media for this appearance</inlineHelpText>
        <label>Media Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Obligation__c</fullName>
        <label>Obligation</label>
        <referenceTo>PRT_Obligation__c</referenceTo>
        <relationshipLabel>Appearances</relationshipLabel>
        <relationshipName>Talent_Appearances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Additional_Fee__c</fullName>
        <description>Record any fee associated with this appearance. This is primary for capture of case-by-case contract terms.</description>
        <inlineHelpText>Where this appearance is funded on a case by case basis</inlineHelpText>
        <label>Additional Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appearance_Date__c</fullName>
        <label>Appearance Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decrement_Obligation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this field if the advocate has agreed this appearance should not reduce their contracted appearances.</description>
        <label>Deduct from Obligation</label>
        <type>Checkbox</type>
    </fields>
    <validationRules>
        <fullName>Advocate_match_contract</fullName>
        <active>true</active>
        <errorConditionFormula>Advocate__c &lt;&gt; Contract__r.Advocate__c</errorConditionFormula>
        <errorDisplayField>Contract__c</errorDisplayField>
        <errorMessage>The contract must belong to the selected advocate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Obligation_match_contract</fullName>
        <active>true</active>
        <errorConditionFormula>Contract__c &lt;&gt;  Obligation__r.Contract__c</errorConditionFormula>
        <errorDisplayField>Obligation__c</errorDisplayField>
        <errorMessage>The obligation must belong to the selected contract</errorMessage>
    </validationRules>
</CustomObject>